3-orchestrating-containers-with-kubernetes/ubuntu-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
spec:
  containers:
  - image: ubuntu
    name: ubuntu
    command: ["tail", "-f", "/dev/null"]
