3-orchestrating-containers-with-kubernetes/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - image: nginxdemos/hello
        name: nginx
---
apiVersion: v1
kind: Service
metadata:
  labels:
    tier: frontend
  name: nginx-test
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    tier: frontend
  type: LoadBalancer
